Add Jerry and Gloria's photo

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </div>
         <p class="in-memoriam">Together in life. Together forever.</p>
         <div class="photo-frame">
-            <span class="photo-placeholder">Photo coming soon</span>
+            <img src="photos/jerry-and-gloria.jpg" alt="Jerry and Gloria Rhodes together">
         </div>
         <div class="scroll-hint">↓</div>
     </section>
@@ -382,11 +382,11 @@
     <section class="section">
         <h2>Memories</h2>
         <div class="section-divider"></div>
-        <p style="text-align: center; font-style: italic; color: #a89880;">
-            Photos coming soon — a collection of memories from family and friends.
-        </p>
         <div class="gallery" id="gallery">
-            <!-- Photos will be added here -->
+            <div class="gallery-item">
+                <img src="photos/jerry-and-gloria.jpg" alt="Jerry and Gloria Rhodes">
+            </div>
+            <!-- More photos will be added -->
         </div>
     </section>
 
