Add vintage photo of Jerry and Gloria

--- a/index.html
+++ b/index.html
@@ -386,6 +386,9 @@
             <div class="gallery-item">
                 <img src="photos/jerry-and-gloria.jpg" alt="Jerry and Gloria Rhodes">
             </div>
+            <div class="gallery-item">
+                <img src="photos/jerry-and-gloria-young.jpg" alt="Jerry and Gloria Rhodes — the early years">
+            </div>
             <!-- More photos will be added -->
         </div>
     </section>
