Add Fort White location

--- a/index.html
+++ b/index.html
@@ -372,9 +372,15 @@
         </div>
 
         <div class="restaurant-card">
-            <h3>Rhodes Real Pit Bar-B-Que #2</h3>
+            <h3>Rhodes Real Pit Bar-B-Que</h3>
             <div class="location">📍 315 N Lake Avenue, Lake Butler, FL 32054</div>
-            <p>The second location in Union County's seat, bringing the same real pit flavor to the Lake Butler community.</p>
+            <p>The Lake Butler location in Union County's seat, bringing the same real pit flavor to the community.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>Rhodes Real Pit Bar-B-Que</h3>
+            <div class="location">📍 Fort White, FL</div>
+            <p>A brief but memorable chapter — Jerry and Gloria brought their signature barbecue to the Fort White community as well.</p>
         </div>
     </section>
 
