Add family — Karen, Kimberly, Cindy, and Michael

--- a/index.html
+++ b/index.html
@@ -411,11 +411,20 @@
         <h2>Family</h2>
         <div class="section-divider"></div>
         <p>
-            Jerry and Gloria's greatest legacy is their family. Their love, values, and spirit live on
-            through every generation they helped raise and every life they touched.
+            Jerry and Gloria's greatest legacy is their family. Together they raised four children,
+            filling their home with love, laughter, and the smell of barbecue.
         </p>
-        <p style="text-align: center; font-style: italic; color: #a89880;">
-            Family details will be added with the family's wishes.
+        <div style="text-align: center; margin: 2rem 0; line-height: 2.2;">
+            <p style="font-family: 'Playfair Display', serif; font-size: 1.15rem; color: #f5efe8;">
+                Karen &nbsp;·&nbsp; Kimberly &nbsp;·&nbsp; Cindy &nbsp;·&nbsp; Michael
+            </p>
+            <p style="font-style: italic; color: #a89880; font-size: 0.95rem; margin-top: 0.5rem;">
+                Their son Michael preceded them in passing in the early 2000s.
+            </p>
+        </div>
+        <p>
+            Their love, values, and spirit live on through every generation they helped raise
+            and every life they touched.
         </p>
     </section>
 
