Add family autumn photo

--- a/index.html
+++ b/index.html
@@ -395,6 +395,9 @@
             <div class="gallery-item">
                 <img src="photos/jerry-and-gloria-young.jpg" alt="Jerry and Gloria Rhodes — the early years">
             </div>
+            <div class="gallery-item">
+                <img src="photos/family-autumn.jpg" alt="Family photo in autumn">
+            </div>
             <!-- More photos will be added -->
         </div>
     </section>
