Add wedding date Aug 23 1963, 60th anniversary, expanded timeline

--- a/index.html
+++ b/index.html
@@ -337,12 +337,24 @@
                 <div class="timeline-text">Jerry was born on July 3 in Florida.</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-year">The Early Years</div>
-                <div class="timeline-text">Jerry and Gloria found each other and began building a life together in North Florida's Union and Lafayette counties.</div>
+                <div class="timeline-year">August 23, 1963</div>
+                <div class="timeline-text">Jerry and Gloria were married. She was 18, he was 17 — young and in love. It was the beginning of a partnership that would last over 62 years.</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">Family</div>
+                <div class="timeline-text">Together they raised four children — Karen, Kimberly, Cindy, and Michael — building a home filled with love in North Florida.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Rhodes Real Pit Bar-B-Que</div>
-                <div class="timeline-text">Together they opened Rhodes Real Pit Bar-B-Que — first in Mayo, then expanding to Lake Butler. Real pit barbecue, cooked the way it should be. The restaurants became community gathering places where everyone was welcome.</div>
+                <div class="timeline-text">Together they opened Rhodes Real Pit Bar-B-Que — with locations in Mayo, Lake Butler, and Fort White. Real pit barbecue, cooked the way it should be. The restaurants became community gathering places where everyone was welcome.</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">Early 2000s</div>
+                <div class="timeline-text">Their son Michael passed away — a loss that stayed with the family forever.</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">August 23, 2023</div>
+                <div class="timeline-text">Jerry and Gloria celebrated their 60th wedding anniversary — six decades of love, laughter, and life together.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">February 7, 2026</div>
