Add Gloria's maiden name (Allen), full birth dates

--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
         <div class="section-divider"></div>
         <div class="timeline">
             <div class="timeline-item">
-                <div class="timeline-year">1945</div>
-                <div class="timeline-text">Gloria was born on January 16 in Florida.</div>
+                <div class="timeline-year">January 16, 1945</div>
+                <div class="timeline-text">Gloria Marie Allen was born in Florida.</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-year">1946</div>
-                <div class="timeline-text">Jerry was born on July 3 in Florida.</div>
+                <div class="timeline-year">July 3, 1946</div>
+                <div class="timeline-text">Jerry Rhodes was born in Florida.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">August 23, 1963</div>
