Full names: Jerry Dane Rhodes & Gloria Marie (Allen) Rhodes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>In Loving Memory — Jerry & Gloria Rhodes</title>
+    <title>In Loving Memory — Jerry Dane & Gloria Marie Rhodes</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&family=Lato:wght@300;400;700&display=swap');
 
@@ -297,7 +297,7 @@
     <!-- Hero -->
     <section class="hero">
         <div class="ornament">✦ ✦ ✦</div>
-        <h1>Jerry <span class="ampersand">&</span> Gloria Rhodes</h1>
+        <h1>Jerry Dane <span class="ampersand">&</span> Gloria Marie Rhodes</h1>
         <div class="dates">
             July 3, 1946 — February 7, 2026 &nbsp;&nbsp;·&nbsp;&nbsp; January 16, 1945 — February 8, 2026
         </div>
@@ -334,7 +334,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">July 3, 1946</div>
-                <div class="timeline-text">Jerry Rhodes was born in Florida.</div>
+                <div class="timeline-text">Jerry Dane Rhodes was born in Florida.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">August 23, 1963</div>
@@ -446,7 +446,7 @@
     <!-- Footer -->
     <footer class="memorial-footer">
         <div class="ornament">✦</div>
-        <p>In Loving Memory of Jerry & Gloria Rhodes</p>
+        <p>In Loving Memory of Jerry Dane & Gloria Marie Rhodes</p>
         <p style="margin-top: 0.5rem;">Forever in our hearts</p>
     </footer>
 
