Add Pelican Lake WI to timeline, update research notes

--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@
                 <div class="timeline-text">Jerry and Gloria were married. She was 18, he was 17 — young and in love. It was the beginning of a partnership that would last over 62 years.</div>
             </div>
             <div class="timeline-item">
+                <div class="timeline-year">The Journey</div>
+                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to as far as Pelican Lake, Wisconsin, and many places in between. Wherever they went, they built community and made it home.</div>
+            </div>
+            <div class="timeline-item">
                 <div class="timeline-year">Family</div>
                 <div class="timeline-text">Together they raised four children — Karen, Kimberly, Cindy, and Michael — building a home filled with love in North Florida.</div>
             </div>
