Add Dallas and Mesquite TX

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">The Journey</div>
-                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to Pelican Lake, Wisconsin, to San Diego, California, and many places in between. Wherever they went, they built community and made it home.</div>
+                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to Pelican Lake, Wisconsin, San Diego, California, Dallas and Mesquite, Texas, and many places in between. Wherever they went, they built community and made it home.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Family</div>
