--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
         <div class="timeline">
             <div class="timeline-item">
                 <div class="timeline-year">January 16, 1945</div>
-                <div class="timeline-text">Gloria Marie Allen was born in Florida.</div>
+                <div class="timeline-text">Gloria Marie Allen was born in Fruitfield, Texas.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">July 3, 1946</div>
-                <div class="timeline-text">Jerry Dane Rhodes was born in Florida.</div>
+                <div class="timeline-text">Jerry Dane Rhodes was born in Augusta, Maine.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">August 23, 1963</div>
