--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Family</div>
-                <div class="timeline-text">Together they raised four children — Karen, Kimberly, Cindy, and Michael — building a home filled with love in North Florida.</div>
+                <div class="timeline-text">Together they raised five children — Karen, Kimberly, Cindy, Michelle, and Michael — building a home filled with love wherever life took them.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Rhodes Real Pit Bar-B-Que</div>
@@ -430,12 +430,12 @@
         <h2>Family</h2>
         <div class="section-divider"></div>
         <p>
-            Jerry and Gloria's greatest legacy is their family. Together they raised four children,
+            Jerry and Gloria's greatest legacy is their family. Together they raised five children,
             filling their home with love, laughter, and the smell of barbecue.
         </p>
         <div style="text-align: center; margin: 2rem 0; line-height: 2.2;">
             <p style="font-family: 'Playfair Display', serif; font-size: 1.15rem; color: #f5efe8;">
-                Karen &nbsp;·&nbsp; Kimberly &nbsp;·&nbsp; Cindy &nbsp;·&nbsp; Michael
+                Karen &nbsp;·&nbsp; Kimberly &nbsp;·&nbsp; Cindy &nbsp;·&nbsp; Michelle &nbsp;·&nbsp; Michael
             </p>
             <p style="font-style: italic; color: #a89880; font-size: 0.95rem; margin-top: 0.5rem;">
                 Their son Michael preceded them in passing in the early 2000s.
