Michelle born July 1 1973 in Benson AZ, roast contest context

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">The Journey</div>
-                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to Pelican Lake, Wisconsin, San Diego, California, Benson, Arizona, Dallas and Mesquite, Texas, and many places in between. Wherever they went, they built community and made it home. In Benson, the family even won a local contest when their daughter Michelle weighed exactly the same as a roast — the kind of small-town moment that made for a newspaper story and a lifetime of laughs.</div>
+                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to Pelican Lake, Wisconsin, San Diego, California, Benson, Arizona, Dallas and Mesquite, Texas, and many places in between. Wherever they went, they built community and made it home. In Benson, Arizona, the family made the local paper when newborn Michelle weighed exactly the same as a roast in a contest — the kind of small-town moment that made for a lifetime of laughs.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Family</div>
