--- a/index.html
+++ b/index.html
@@ -313,12 +313,13 @@
         <h2>Their Story</h2>
         <div class="section-divider"></div>
         <p>
-            Jerry and Gloria Rhodes built a life rooted in family, hard work, and the tight-knit communities
-            of rural North Florida. From Lake Butler to Mayo, they were the kind of people who fed their neighbors —
-            literally — and left an indelible mark on everyone they met.
+            The night they met, Gloria had dates lined up with a few different guys. Jerry was the first one to show up — so he got to take her out. They were together ever since.
         </p>
         <p>
-            They departed this world just one day apart — Jerry on February 7, 2026, and Gloria on February 8, 2026 —
+            What started that night became a 62-year love story that spanned 34 states. Jerry and Gloria Rhodes were always on the move — from Maine to California, Texas to Wisconsin, Arizona and everywhere in between — before finally settling in the small towns of North Florida. They were the kind of people who fed their neighbors — literally — and left an indelible mark on everyone they met.
+        </p>
+        <p>
+            They departed this world just two days apart — Jerry on February 6, 2026, and Gloria on February 8, 2026 —
             a testament to a bond so deep that even in passing, they couldn't bear to be separated.
         </p>
     </section>
@@ -342,7 +343,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">The Journey</div>
-                <div class="timeline-text">Jerry and Gloria's life together took them across the country — from the small towns of North Florida to Pelican Lake, Wisconsin, San Diego, California, Benson, Arizona, Dallas and Mesquite, Texas, and many places in between. Wherever they went, they built community and made it home. In Benson, Arizona, the family made the local paper when newborn Michelle weighed exactly the same as a roast in a contest — the kind of small-town moment that made for a lifetime of laughs.</div>
+                <div class="timeline-text">Jerry and Gloria's life together took them across 34 states — from Pelican Lake, Wisconsin, to San Diego, California, Benson, Arizona, Dallas and Mesquite, Texas, and countless places in between before finally settling in North Florida. They were always on the move, but wherever they landed, they made it home. In Benson, Arizona, the family made the local paper when newborn Michelle weighed exactly the same as a roast in a contest — the kind of small-town moment that made for a lifetime of laughs.</div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">Family</div>
