New header quote — written for Jerry and Gloria

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="dates">
             July 3, 1946 — February 6, 2026 &nbsp;&nbsp;·&nbsp;&nbsp; January 16, 1945 — February 8, 2026
         </div>
-        <p class="in-memoriam">Together in life. Together forever.</p>
+        <p class="in-memoriam">"They lived as one, and in the end, not even death could part them for long."</p>
         <div class="photo-frame">
             <img src="photos/jerry-and-gloria.jpg" alt="Jerry and Gloria Rhodes together">
         </div>
