Add newspaper discoveries from UF Digital Library - 7 articles found
- Chicken incubator house feature (1980)
- Jerry as city councilman (1983)
- Jerry running for office (1985)
- Rhodes-O'Sullivan wedding announcement (1983)
- Rhodes-Foster wedding announcement (1998)
- BBQ restaurant opening in Mayo (2011)
- Help wanted ad (1997)
- Updated timeline with house build and council seat
- Updated research notes with all finds

--- a/index.html
+++ b/index.html
@@ -427,6 +427,14 @@
                 <div class="timeline-text">Together they raised five children — Karen, Kimberly, Cindy, Michelle, and Michael — building a home filled with love wherever life took them.</div>
             </div>
             <div class="timeline-item">
+                <div class="timeline-year">1980</div>
+                <div class="timeline-text">Jerry built the family home in Fort White — out of eight old chicken incubators. When he first told the family, nobody believed him. The Lake City Reporter ran a feature on it.</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-year">1983</div>
+                <div class="timeline-text">Jerry served as a city councilman, volunteering to distribute surplus goods and serving his community in local government.</div>
+            </div>
+            <div class="timeline-item">
                 <div class="timeline-year">Rhodes Real Pit Bar-B-Que</div>
                 <div class="timeline-text">Together they opened Rhodes Real Pit Bar-B-Que — with locations in Mayo, Lake Butler, and Fort White. Real pit barbecue, cooked the way it should be. The restaurants became community gathering places where everyone was welcome.</div>
             </div>
@@ -447,6 +455,61 @@
                 <div class="timeline-text">Gloria followed just one day later — reunited with Jerry.</div>
             </div>
         </div>
+    </section>
+
+    <!-- In the News -->
+    <section class="section">
+        <h2>In the News</h2>
+        <div class="section-divider"></div>
+        <p>
+            Jerry and Gloria weren't just part of their communities — they made the papers. These articles, discovered in the University of Florida Digital Newspaper Library, paint a picture of a family deeply woven into the fabric of North Florida life.
+        </p>
+
+        <div class="restaurant-card">
+            <h3>🏠 The Chicken Incubator House</h3>
+            <div class="location">Lake City Reporter — May 29, 1980</div>
+            <p>"When Jerry Rhodes first told his family he was going to build their home out of eight old chicken incubators..." — A feature article about Jerry's ingenuity, building the family home in Fort White from repurposed chicken incubators. The kind of resourcefulness that defined him.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>🏛️ Serving the Community</h3>
+            <div class="location">Lake City Reporter — January 11, 1983</div>
+            <p>"Mayor McGrath and Councilman Jerry Rhodes said they would volunteer to distribute the surplus products" — Jerry served as a city councilman, giving back to the community he loved.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>🏛️ Running for Office</h3>
+            <div class="location">Lake City Reporter — August 6, 1985</div>
+            <p>"An opponent, Jerry Rhodes, qualified 30 minutes before deadline" — Jerry stepping up to run in a local election, always willing to serve.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>💒 Rhodes–O'Sullivan Wedding</h3>
+            <div class="location">Lake City Reporter — November 4, 1983</div>
+            <p>Bridal announcement for one of the Rhodes daughters, with Jerry and Gloria named as proud parents.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>💒 Rhodes–Foster Wedding</h3>
+            <div class="location">Lake City Reporter — November 11, 1998</div>
+            <p>"Michelle Renee Rhodes and Scott Foster" — Michelle's wedding announcement, with Jerry and Gloria celebrating another daughter's new chapter.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>🍖 BBQ Grand Opening</h3>
+            <div class="location">Mayo Free Press — February 3, 2011</div>
+            <p>"Rhodes Real Pit BBQ opened their doors right around the holidays, offering an all-you-can-eat buffet" — The Mayo location opens, bringing real pit barbecue to Lafayette County.</p>
+        </div>
+
+        <div class="restaurant-card">
+            <h3>🍖 Help Wanted</h3>
+            <div class="location">Lake City Reporter — August 5, 1997</div>
+            <p>"Apply at Rhodes Real Pit BBQ in Mayo Florida. 294-3643" — Business was good enough to need more hands.</p>
+        </div>
+
+        <p style="text-align: center; font-style: italic; color: #a89880; margin-top: 2rem;">
+            Articles sourced from the <a href="https://ufdc.ufl.edu/" style="color: #c4a478;">University of Florida Digital Newspaper Library</a>
+        </p>
     </section>
 
     <!-- The Restaurants -->
