Add links to UFDC newspaper articles

--- a/index.html
+++ b/index.html
@@ -467,43 +467,43 @@
 
         <div class="restaurant-card">
             <h3>🏠 The Chicken Incubator House</h3>
-            <div class="location">Lake City Reporter — May 29, 1980</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Jerry+Rhodes%22+%22chicken+incubators%22&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — May 29, 1980 ↗</a></div>
             <p>"When Jerry Rhodes first told his family he was going to build their home out of eight old chicken incubators..." — A feature article about Jerry's ingenuity, building the family home in Fort White from repurposed chicken incubators. The kind of resourcefulness that defined him.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>🏛️ Serving the Community</h3>
-            <div class="location">Lake City Reporter — January 11, 1983</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Councilman+Jerry+Rhodes%22+%22surplus+products%22&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — January 11, 1983 ↗</a></div>
             <p>"Mayor McGrath and Councilman Jerry Rhodes said they would volunteer to distribute the surplus products" — Jerry served as a city councilman, giving back to the community he loved.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>🏛️ Running for Office</h3>
-            <div class="location">Lake City Reporter — August 6, 1985</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Jerry+Rhodes%22+qualified+deadline&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — August 6, 1985 ↗</a></div>
             <p>"An opponent, Jerry Rhodes, qualified 30 minutes before deadline" — Jerry stepping up to run in a local election, always willing to serve.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>💒 Rhodes–O'Sullivan Wedding</h3>
-            <div class="location">Lake City Reporter — November 4, 1983</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=Rhodes+O%27Sullivan+bridal+Jerry+Gloria&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — November 4, 1983 ↗</a></div>
             <p>Bridal announcement for one of the Rhodes daughters, with Jerry and Gloria named as proud parents.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>💒 Rhodes–Foster Wedding</h3>
-            <div class="location">Lake City Reporter — November 11, 1998</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Michelle+Renee+Rhodes%22+Foster&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — November 11, 1998 ↗</a></div>
             <p>"Michelle Renee Rhodes and Scott Foster" — Michelle's wedding announcement, with Jerry and Gloria celebrating another daughter's new chapter.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>🍖 BBQ Grand Opening</h3>
-            <div class="location">Mayo Free Press — February 3, 2011</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Rhodes+Real+Pit%22+%22opened+their+doors%22&t=newspaper" target="_blank" style="color: #c4a478;">Mayo Free Press — February 3, 2011 ↗</a></div>
             <p>"Rhodes Real Pit BBQ opened their doors right around the holidays, offering an all-you-can-eat buffet" — The Mayo location opens, bringing real pit barbecue to Lafayette County.</p>
         </div>
 
         <div class="restaurant-card">
             <h3>🍖 Help Wanted</h3>
-            <div class="location">Lake City Reporter — August 5, 1997</div>
+            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Rhodes+Real+Pit%22+294-3643&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — August 5, 1997 ↗</a></div>
             <p>"Apply at Rhodes Real Pit BBQ in Mayo Florida. 294-3643" — Business was good enough to need more hands.</p>
         </div>
 
