Add direct UFDC article links for Jan 1983 councilman + Nov 1983 wedding
Confirmed issue URLs:
- UF00028308/06899 (Jan 11, 1983) - Councilman Jerry Rhodes, page 2
- UF00028308/07112 (Nov 4, 1983) - Rhodes-O'Sullivan wedding, page 7

Other articles still linked to search queries - direct URLs TBD
May 1980 chicken incubator article falls in digitization gap (1974-1982)

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
         <div class="restaurant-card">
             <h3>🏛️ Serving the Community</h3>
-            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=%22Councilman+Jerry+Rhodes%22+%22surplus+products%22&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — January 11, 1983 ↗</a></div>
+            <div class="location"><a href="https://ufdc.ufl.edu/UF00028308/06899?search=%22jerry+rhodes%22" target="_blank" style="color: #c4a478;">Lake City Reporter — January 11, 1983 ↗</a></div>
             <p>"Mayor McGrath and Councilman Jerry Rhodes said they would volunteer to distribute the surplus products" — Jerry served as a city councilman, giving back to the community he loved.</p>
         </div>
 
@@ -485,7 +485,7 @@
 
         <div class="restaurant-card">
             <h3>💒 Rhodes–O'Sullivan Wedding</h3>
-            <div class="location"><a href="https://ufdc.ufl.edu/search/?q=Rhodes+O%27Sullivan+bridal+Jerry+Gloria&t=newspaper" target="_blank" style="color: #c4a478;">Lake City Reporter — November 4, 1983 ↗</a></div>
+            <div class="location"><a href="https://ufdc.ufl.edu/UF00028308/07112?search=rhodes+o%27sullivan" target="_blank" style="color: #c4a478;">Lake City Reporter — November 4, 1983 ↗</a></div>
             <p>Bridal announcement for one of the Rhodes daughters, with Jerry and Gloria named as proud parents.</p>
         </div>
 
