Fix Jerry's passing date to February 5, 2026

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <div class="ornament">✦ ✦ ✦</div>
         <h1>Jerry Dane <span class="ampersand">&</span> Gloria Marie Rhodes</h1>
         <div class="dates">
-            July 3, 1946 — February 6, 2026 &nbsp;&nbsp;·&nbsp;&nbsp; January 16, 1945 — February 8, 2026
+            July 3, 1946 — February 5, 2026 &nbsp;&nbsp;·&nbsp;&nbsp; January 16, 1945 — February 8, 2026
         </div>
         <p class="in-memoriam">"They lived as one, and in the end, not even death could part them for long."</p>
         <div class="photo-frame">
@@ -396,7 +396,7 @@
             What started that night became a 62-year love story that spanned more states than most people ever visit. Jerry and Gloria Rhodes were always on the move — from Maine to California, Texas to Wisconsin, Arizona and everywhere in between — before finally settling in the small towns of North Florida. They were the kind of people who fed their neighbors — literally — and left an indelible mark on everyone they met.
         </p>
         <p>
-            They departed this world just two days apart — Jerry on February 6, 2026, and Gloria on February 8, 2026 —
+            They departed this world just three days apart — Jerry on February 5, 2026, and Gloria on February 8, 2026 —
             a testament to a bond so deep that even in passing, they couldn't bear to be separated.
         </p>
     </section>
@@ -447,7 +447,7 @@
                 <div class="timeline-text">Jerry and Gloria celebrated their 60th wedding anniversary — six decades of love, laughter, and life together.</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-year">February 6, 2026</div>
+                <div class="timeline-year">February 5, 2026</div>
                 <div class="timeline-text">Jerry passed away peacefully, surrounded by the love of his family.</div>
             </div>
             <div class="timeline-item">
