--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-year">February 8, 2026</div>
-                <div class="timeline-text">Gloria followed just one day later — reunited with Jerry.</div>
+                <div class="timeline-text">Gloria followed just three days later — reunited with Jerry.</div>
             </div>
         </div>
     </section>
