Add funeral home branding demo footer — shows advertising placement for sales pitch

--- a/index.html
+++ b/index.html
@@ -284,6 +284,49 @@
             font-size: 0.9rem;
         }
 
+        /* Funeral Home Branding */
+        .funeral-home-badge {
+            margin-top: 3rem;
+            padding: 2rem;
+            border-top: 1px solid rgba(196, 164, 120, 0.15);
+            text-align: center;
+        }
+
+        .funeral-home-badge .fh-label {
+            font-family: 'Playfair Display', serif;
+            font-style: italic;
+            font-size: 0.85rem;
+            color: #a89880;
+            margin-bottom: 0.75rem;
+            letter-spacing: 0.05rem;
+        }
+
+        .funeral-home-badge .fh-name {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.3rem;
+            color: #f5efe8;
+            margin-bottom: 0.4rem;
+        }
+
+        .funeral-home-badge .fh-details {
+            font-weight: 300;
+            font-size: 0.9rem;
+            color: #a89880;
+            line-height: 1.8;
+        }
+
+        .funeral-home-badge .fh-details a {
+            color: #c4a478;
+            text-decoration: none;
+        }
+
+        .funeral-home-badge .fh-tagline {
+            font-style: italic;
+            font-size: 0.85rem;
+            color: #7a7068;
+            margin-top: 0.5rem;
+        }
+
         /* Form */
         .memory-form {
             max-width: 600px;
@@ -627,6 +670,18 @@
         <div class="ornament">✦</div>
         <p>In Loving Memory of Jerry Dane & Gloria Marie Rhodes</p>
         <p style="margin-top: 0.5rem;">Forever in our hearts</p>
+
+        <!-- Funeral Home Branding -->
+        <div class="funeral-home-badge">
+            <div class="fh-label">Memorial lovingly prepared by</div>
+            <div class="fh-name">Your Funeral Home Name</div>
+            <div class="fh-details">
+                📞 (386) 555-0100 &nbsp;&nbsp;·&nbsp;&nbsp; 
+                <a href="#">yourfuneralhome.com</a><br>
+                123 Main Street, Lake City, FL 32025
+            </div>
+            <div class="fh-tagline">Serving Columbia County families since 1964</div>
+        </div>
     </footer>
 
 </body>
