--- a/index.html
+++ b/index.html
@@ -671,6 +671,10 @@
                 <label for="memory">Your Memory or Story</label>
                 <textarea id="memory" name="memory" rows="6" placeholder="Share a favorite memory, a funny story, or just what they meant to you..." required></textarea>
             </div>
+            <div class="form-group">
+                <label for="photo">Share a Photo (optional)</label>
+                <input type="file" id="photo" name="photo" accept="image/*">
+            </div>
             <button type="submit" class="submit-btn">Share This Memory</button>
         </form>
 
@@ -751,8 +755,12 @@
                     year: 'numeric', month: 'long', day: 'numeric' 
                 });
                 const rel = m.relationship ? ` — ${m.relationship}` : '';
+                const photoHtml = m.photoUrl 
+                    ? `<div style="margin-bottom: 1rem;"><img src="${API_BASE}${m.photoUrl}" alt="Shared photo" style="max-width: 100%; border-radius: 6px; border: 1px solid rgba(196,164,120,0.2);"></div>` 
+                    : '';
                 container.innerHTML += `
                     <div class="memory-card">
+                        ${photoHtml}
                         <div class="memory-text">"${m.memory}"</div>
                         <div class="memory-author">— ${m.name}${rel}</div>
                         <div class="memory-date">${date}</div>
@@ -781,6 +789,12 @@
             formData.append('name', name);
             formData.append('relationship', relationship);
             formData.append('memory', memory);
+            
+            // Include photo if selected
+            const photoInput = form.querySelector('#photo');
+            if (photoInput.files.length > 0) {
+                formData.append('photo', photoInput.files[0]);
+            }
             
             const res = await fetch(`${API_BASE}/api/memories/${MEMORIAL_SLUG}`, {
                 method: 'POST',
