Add 1973 newspaper article - Baby and Roast Weigh The Same

--- a/index.html
+++ b/index.html
@@ -598,8 +598,22 @@
             <p>"Apply at Rhodes Real Pit BBQ in Mayo Florida. 294-3643" — Business was good enough to need more hands.</p>
         </div>
 
+        <div class="restaurant-card">
+            <h3>👶 Baby and Roast Weigh The Same</h3>
+            <div class="location">San Pedro Valley News-Sun — July 12, 1973, Benson, Arizona</div>
+            <p>"Each year the San Pedro CowBelles have a 'Beef for Father's Day' promotion and offer a roast equal to the new-born baby's weight for the first baby born in Benson Hospital after midnight Father's Day." — Little Michelle Renee Rose (later Rhodes) was born shortly after midnight on June 30th, weighing 7 lb. 3 oz. Mrs. Inez Post of the San Pedro Cow-belles presented the matching roast to Jerry and Gloria. The family was living at Sunset Valley Country Club in Benson with their five children — four girls and one boy.</p>
+            <div style="margin-top: 1rem; text-align: center;">
+                <a href="newspaper-1973.png" target="_blank">
+                    <img src="newspaper-1973.png" alt="San Pedro Valley News-Sun, July 12, 1973 — Baby and Roast Weigh The Same" style="max-width: 100%; border-radius: 8px; border: 1px solid rgba(196,164,120,0.3); cursor: pointer;">
+                </a>
+                <p style="font-size: 0.8rem; color: #a89880; margin-top: 0.5rem; font-style: italic;">
+                    Original article courtesy of the Benson Public Library, Benson, AZ
+                </p>
+            </div>
+        </div>
+
         <p style="text-align: center; font-style: italic; color: #a89880; margin-top: 2rem;">
-            Articles sourced from the <a href="https://ufdc.ufl.edu/" style="color: #c4a478;">University of Florida Digital Newspaper Library</a>
+            Articles sourced from the <a href="https://ufdc.ufl.edu/" style="color: #c4a478;">University of Florida Digital Newspaper Library</a> and the Benson Public Library
         </p>
     </section>
 
